Fix div break in print mode.

--- a/view/html/css/print.css
+++ b/view/html/css/print.css
@@ -69,3 +69,7 @@ a[href]:after {
 footer img {
 	display: none;
 }
+
+div {
+	page-break-inside: avoid;
+}
